--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -4,8 +4,8 @@
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
     position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
-    max-width: 425px;
     height: 80px;
     padding: 0 17px;
     gap: 17px;
