--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -7,6 +7,9 @@
     background: white;
     padding: 0 22px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .de-header__logo {
